frontend/test/should_pass/exec_009.grg
using deep_model_001;

rule r(y : Bcc) : (Bcc) {
  modify{
    return (y);
	// removed use before definition and argument type not matching parameter type bullshit
    exec(c:Bcc=c & (c)=r(c)   & (c)=r(c));
    exec((c:Bcc)=r(c) & (c)=r(c));
    exec(c:Bcc=y & (c)=r(c)   & (c)=r(c));
  }
}
