frontend/test/should_fail/exec_subtype_as_return_type.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  a : A;
  b : B;
  modify{
    return (b);
    exec((c:Bcc) =r(y));     // subtype as return var    => should_fail
  }
}
